Trying to align everything correctly.

--- a/style.css
+++ b/style.css
@@ -1,3 +1,29 @@
 html{
-  font-size: 12px;
+  font-size: 20px;
+  text-align: center;
+  font-family: sans-serif;
+}
+
+body,html {
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+}
+
+.rps_button{
+  background-color: yellow;
+  color: black;
+  border-width: 5px;
+  margin: 0 10px 20px 10px;
+  width: 100px;
+}
+
+li{
+  display: inline;
+  margin: 0 25px 0 25px;
+}
+
+.score{
+  text-align: center;
+  width: 200px;
 }
